PPT: Updated processing of placeholders.

Only msosptRectangle type shape should be considered to be an ODF compliant placeholder.
Then we test if it's allowed for the current slide layout and if it contains any text.

BUG:273398