filters/words/msword-odf/drawclient.cpp
@@ -114,7 +114,8 @@ KWordGraphicsHandler::DrawClient::createGraphicStyle(const MSO::OfficeArtClientT
 }
 
 void
-KWordGraphicsHandler::DrawClient::addTextStyles(const MSO::OfficeArtClientTextBox* clientTextbox,
+KWordGraphicsHandler::DrawClient::addTextStyles(const quint16 msospt,
+                                                const MSO::OfficeArtClientTextBox* clientTextbox,
                                                 const MSO::OfficeArtClientData* clientData,
                                                 KoGenStyle& style,
                                                 Writer& out)
